# mcc_classifier

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
artifacts/model/: model_bundle.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: data.csv
scripts/: compare_models.py  evaluate_model.py  train_model.py
solution/: Dockerfile  PROD.code-workspace  app.py  df0.csv  features.py  prod-1.7.ipynb  prod-1.8.ipynb  requirements.txt  train_model.py
solution/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
solution/catboost_info/learn/: events.out.tfevents
solution/model/: le_mcc.pkl  mcc_codes.json  model.pkl  model_bundle.pkl  model_cat.cbm  model_svc.pkl  scaler.pkl  vectorizer.pkl
src/mcc_classifier/: __init__.py
src/mcc_classifier/api/: __init__.py  app.py
src/mcc_classifier/config/: __init__.py  settings.py
src/mcc_classifier/features/: __init__.py  feature_contract.py
src/mcc_classifier/model_io/: __init__.py  bundle.py
src/mcc_classifier/training/: __init__.py  compare_models.py  evaluate.py  evaluate_model.py  model_registry.py  pipeline.py  train.py
tests/: test_api.py  test_feature_contract.py  test_model_selection.py  test_runtime_paths.py
